dev/_infra/grafana-route.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-route
spec:
  type: ExternalName
  externalName: grafana.grafana.svc.cluster.local
