dev/_infra/prometheus-route.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-route
spec:
  type: ExternalName
  externalName: prometheus-server.prometheus.svc.cluster.local
