dev/_infra/service.yml
##==================================================
## ip_192_168_0_2
##==================================================
#apiVersion: v1
#kind: Service
#metadata:
#  name: ip-192-168-0-2
#spec:
#  type: ExternalName
#  externalName: 192.168.0.2
#
#---
##==================================================
## ip_192_168_0_5
##==================================================
#apiVersion: v1
#kind: Service
#metadata:
#  name: ip-192-168-0-5
#spec:
#  type: ExternalName
#  externalName: 192.168.0.5

---
#==================================================
# argocd 
#==================================================
apiVersion: v1
kind: Service
metadata:
  name: argocd
#  namespace: argocd
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local

---
#==================================================
# prometheus 
#==================================================
apiVersion: v1
kind: Service
metadata:
  name: prometheus
#  namespace: prometheus
spec:
  type: ExternalName
  externalName: prometheus-server.prometheus.svc.cluster.local
