dev/_infra/ingress.yml
#==================================================
# ingress-https
#==================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-https
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  rules:
    # argocd
    - host: argocd.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd
                port:
                  number: 443

---
#==================================================
# ingress-http
#==================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  rules:
    # code-server
    - host: code-server.oopscraft.org
      http:
         paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ip-192-168-0-5
                port:
                  number: 8000
    # jenkins
    - host: jenkins.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ip-192-168-0-2
                port:
                  number: 9999
    # nexus
    - host: nexus.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ip-192-168-0-2
                port:
                  number: 9998
    # scouter
    - host: scouter.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ip-192-168-0-2
                port:
                  number: 6188
    # prometheus
    - host: prometheus.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus
                port:
                  number: 80
    # grafana
    - host: grafana.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ip-192-168-0-2
                port:
                  number: 3000
    # arch4j-web
    - host: arch4j-web.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arch4j-web
                port:
                  number: 8080
    # batman-admin
    - host: batman-admin.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: batman-admin
                port:
                  number: 8080
    # soma-admin
    - host: soma-admin.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: soma-admin
                port:
                  number: 8080
    # soma-collector
    - host: soma-collector.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: soma-collector
                port:
                  number: 8080
    # fintics
    - host: fintics.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fintics-web
                port:
                  number: 8080
    # keycloak
    - host: keycloak.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ip-192-168-0-2
                port:
                  number: 9996
    # torrent
    - host: torrent.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ip-192-168-0-2
                port:
                  number: 9091
